--- a/index.html
+++ b/index.html
@@ -1,3 +1,13 @@
+<!DOCTYPE html>
+<html lang="en" >
+<head>
+  <meta charset="UTF-8">
+  <title>CodePen - step-wdjunior-5</title>
+  <link rel="stylesheet" href="./style.css">
+
+</head>
+<body>
+<!-- partial:index.partial.html -->
 <header>
     <img src="https://res.cloudinary.com/dfog0e294/image/upload/v1547038233/webdev/Blog/logo-LEGO-white.png" width="200" draggable="false" alt="Logo">
 </header>
@@ -62,3 +72,7 @@
     </center>
   </div>
 </footer>
+<!-- partial -->
+  
+</body>
+</html>
